--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>323</p>
                         <span>followers</span>
                     </div>
-                    <div>
+                    <div class="following">
                         <p>290</p>
                         <span>following</span>
                     </div>
